<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.arlas</groupId>
    <artifactId>subscriptions-parent</artifactId>
    <version>19.7.5</version>
    <packaging>pom</packaging>
    <name>ARLAS subscriptions parent</name>

    <modules>
        <module>arlas-server-client</module>
        <module>subscriptions-commons</module>
        <module>subscriptions-matcher</module>
        <module>subscriptions-manager</module>
        <module>subscriptions-tests</module>

    </modules>

    <properties>
        <!-- PROJECT-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skipTests>true</skipTests>
        <surefire.version>2.20.1</surefire.version>
        <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>

        <!-- LIBRARIES -->
        <junit.version>4.13.1</junit.version>
        <org.hamcrest.version>1.3</org.hamcrest.version>
        <io.rest-assured.version>3.3.0</io.rest-assured.version>
        <jug.version>3.1.5</jug.version>

        <!-- BACKENDS -->
        <arlas.version>19.7.5</arlas.version>
        <kafka.version>2.1.1</kafka.version>
    </properties>

    <dependencies>
        <!-- ____________________________________________________ -->
        <!-- TESTS -->
        <!-- ____________________________________________________ -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>${org.hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${org.hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.20.1</version>
                <configuration>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                    <skipITs>${skipTests}</skipITs>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- SUREFIRE LOCK DOWN -->
            <plugin>
                <!-- lock down surefire version -->
                <!-- avoid having to "download all the internet" on each docker build of arlas-subscriptions docker image -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
            </plugin>

        </plugins>
    </build>

    <repositories>
        <repository>
            <id>gisaia-public</id>
            <url>https://dl.cloudsmith.io/public/gisaia/public/maven</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
</project>
